adds built in css sheet

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>A simple script to go from an ugly focus ring to a focus that your users are going to want to use.</p>
 <p>Don’t let designers know it was this easy...</p>
 <h2 id="paste-this-into-the-head-of-the-document">Paste this into the head of the document</h2>
-<pre><code>&lt;script src =”https://beautifulfocus.io/lib/beautiful-focus.js” /&gt;</code></pre><h2 id="features">Features</h2>
+<pre><code>&lt;script src=”https://beautifulfocus.io/lib/beautiful-focus.js” /&gt;</code></pre><h2 id="features">Features</h2>
 <ul>
 <li>Gorgeous focus ring</li>
 <li>Only shows Focus whilst navigating with the keyboard</li>
@@ -49,7 +49,7 @@
 <p>Below details some useful information when using the Beautiful Focus lib.</p>
 <h2 id="over-ride-the-styles">Over-ride the styles</h2>
 <p>Simply style using the css id selector:</p>
-<pre><code>#beautiful-focus {
+<pre><code>#__beautiful-focus {
  /* Your styles go here */
 }</code></pre><h2 id="clearing-the-focus">Clearing the focus</h2>
 <p>Sometimes you will want to manually clear the focus ring. To do so simply dispatch a custom window event like so:</p>
