--- a/html/header.html
+++ b/html/header.html
@@ -10,13 +10,22 @@
   <body>
     <header>
       <div>
-        <img src="./assets/beautiful-focus-logo.svg" aria-label="Beautiful Focus" />
+        <img
+          src="./assets/beautiful-focus-logo.svg"
+          aria-label="Beautiful Focus"
+        />
       </div>
     </header>
     <main>
       <div class="demo">
         <img
-          src="./assets/all-the-inputs.svg"
+          class="demo__desktop"
+          src="./assets/demo-desktop.svg"
+          aria-label="A demo of the beautiful focus doing its beautiful thing"
+        />
+        <img
+          class="demo__mobile"
+          src="./assets/demo-mobile.svg"
           aria-label="A demo of the beautiful focus doing its beautiful thing"
         />
         <span class="demo-beautiful-focus" />
