word breaking the script tag

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>A simple script to go from an ugly focus ring to a focus that your users are going to want to use.</p>
 <p>Don’t let designers know it was this easy...</p>
 <h2 id="paste-this-into-the-head-of-the-document">Paste this into the head of the document</h2>
-<pre><code>&lt;script src=”https://beautifulfocus.io/lib/beautiful-focus.js” /&gt;</code></pre><h2 id="features">Features</h2>
+<pre><code>&lt;script src=”https://unpkg.com/beautiful-focus@1.0.0/lib/beautiful-focus.js” /&gt;</code></pre><h2 id="features">Features</h2>
 <ul>
 <li>Gorgeous focus ring</li>
 <li>Only shows Focus whilst navigating with the keyboard</li>
